--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "mypackages/disaster"]
 	path = mypackages/disaster
 	url = https://github.com/jart/disaster
+[submodule "mypackages/all-the-icons"]
+	path = mypackages/all-the-icons
+	url = https://github.com/domtronn/all-the-icons.el.git
+[submodule "mypackages/memoize"]
+	path = mypackages/memoize
+	url = https://github.com/skeeto/emacs-memoize.git
