--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
 *.DS_Store
 *~
-/auto-save-list
-projectile-bookmarks.eld
+.last-package-update-day
 .mc-lists.el
 .tern-port
 .tern-project
-elpa
 ac-comphist.dat
-.last-package-update-day
-semanticdb/
+auto-save-list
+elpa
 eshell
-tramp
 ido.last
+irony/bin
+projectile-bookmarks.eld
+semanticdb
+tramp
