--- a/mypackages/.jsbeautifyrc
+++ b/mypackages/.jsbeautifyrc
@@ -1,13 +1,15 @@
 {
+  "all": {
+    "end_with_newline": false,
+    "indent_char": " ",
+    "indent_size": 2
+  },
   "html": {
     "allowed_file_extensions": ["htm", "html", "xhtml", "shtml", "xml", "svg"],
     "brace_style": "collapse-preserve-inline",
-    "end_with_newline": false,
-    "indent_char": " ",
     "indent_handlebars": false,
     "indent_inner_html": false,
     "indent_scripts": "keep",
-    "indent_size": 2,
     "max_preserve_newlines": 0,
     "preserve_newlines": true,
     "unformatted": ["a", "span", "img", "code", "pre", "sub", "sup", "em", "strong", "b", "i", "u", "strike", "big", "small", "pre", "h1", "h2", "h3", "h4", "h5", "h6"],
@@ -15,9 +17,6 @@
   },
   "css": {
     "allowed_file_extensions": ["css", "scss", "sass", "less"],
-    "end_with_newline": false,
-    "indent_char": " ",
-    "indent_size": 2,
     "newline_between_rules": true,
     "selector_separator": " ",
     "selector_separator_newline": true
@@ -27,10 +26,7 @@
     "brace_style": "collapse-preserve-inline",
     "break_chained_methods": false,
     "e4x": false,
-    "end_with_newline": false,
-    "indent_char": " ",
     "indent_level": 0,
-    "indent_size": 2,
     "indent_with_tabs": false,
     "jslint_happy": false,
     "keep_array_indentation": false,
@@ -49,10 +45,7 @@
     "brace_style": "collapse-preserve-inline",
     "break_chained_methods": false,
     "e4x": false,
-    "end_with_newline": false,
-    "indent_char": " ",
     "indent_level": 0,
-    "indent_size": 2,
     "indent_with_tabs": false,
     "jslint_happy": false,
     "keep_array_indentation": false,
