--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "mypackages/google-styleguide"]
 	path = mypackages/google-styleguide
 	url = https://github.com/google/styleguide.git
+[submodule "mypackages/origami"]
+	path = mypackages/origami
+	url = https://github.com/gregsexton/origami.el.git
