--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,10 @@ ac-comphist.dat
 auto-save-list
 elpa
 eshell
+history
 ido.last
 irony/bin
+meghanada
 projectile-bookmarks.eld
 semanticdb
 tramp
-meghanada
