--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -1,7 +1,7 @@
 {
   "html": {
     "allowed_file_extensions": ["htm", "html", "xhtml", "shtml", "xml", "svg"],
-    "brace_style": "collapse-preserve-inline",
+    "brace_style": "collapse",
     "end_with_newline": true,
     "indent_char": " ",
     "indent_handlebars": false,
@@ -24,7 +24,7 @@
   },
   "js": {
     "allowed_file_extensions": ["js", "json", "jshintrc", "jsbeautifyrc"],
-    "brace_style": "collapse-preserve-inline",
+    "brace_style": "collapse",
     "break_chained_methods": false,
     "e4x": false,
     "end_with_newline": true,
@@ -46,7 +46,7 @@
   },
   "json": {
     "allowed_file_extensions": ["js", "json", "jshintrc", "jsbeautifyrc"],
-    "brace_style": "collapse-preserve-inline",
+    "brace_style": "collapse",
     "break_chained_methods": false,
     "e4x": false,
     "end_with_newline": true,
